# trinoelt

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  trinoelt.docker-compose.yaml
benny-trino/: Makefile  build.env
benny-trino/docker/: trino.Dockerfile
init/trino-elt/: .gitignore
init/trino-elt/coordinator/: access-control.properties  config.properties  group.txt  jvm.config  mysql-event-listener.properties  node.properties  password.db  resource-groups.json
init/trino-elt/coordinator/catalog/: iceberg.properties
init/trino-elt/worker-1/: config.properties  exchange-manager.properties  jvm.config  node.properties
init/trino-elt/worker-1/catalog/: bigquery.properties  iceberg.properties  tidb.properties
local/: .local.env  trino.docker-compose.yaml
local/init/trino/: .env.example
local/init/trino/coordinator/: access_rules.json  config.properties  group-provider.properties  group.txt  jvm.config  node.properties  password.db
local/init/trino/worker-2/: config.properties  node.properties
sl-trino/elt/: Makefile  README.md  build.env
sl-trino/elt/docker/: jmx.config.yaml  trino.Dockerfile
